--- a/debian/rules
+++ b/debian/rules
@@ -85,8 +85,9 @@ endif
 	    -DSYSTEM_TYPE="debian-$(DEB_HOST_GNU_SYSTEM)" \
 	    -DCMAKE_SYSTEM_PROCESSOR=$(DEB_HOST_ARCH) \
 	    -DBUILD_CONFIG=mysql_release \
-	    -DWITHOUT_TOKUDB=true \
-	    -DWITHOUT_CASSANDRA=true \
+	    -DPLUGIN_TOKUDB=NO \
+	    -DPLUGIN_CASSANDRA=NO \
+	    -DPLUGIN_COLUMNSTORE=YES \
 	    -DPLUGIN_AWS_KEY_MANAGEMENT=NO \
 	    -WITH_EMBEDDED_SERVER=OFF \
 	    -DDEB=$(DEB_VENDOR) ..'
